--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,3 +35,17 @@ header a{
   line-height: 30px;
 color: var(--black);
 }
+section .container{
+    display: flex;
+    height: calc(100vh - 92px);
+    align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 35px;
+}
+.info h1{
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 75px;
+  
+}
