--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -26,26 +26,97 @@ a {
     width: 750px;
   }
 }
-header{
+header {
   padding: 31px 42px;
 }
-header a{
+header a {
   font-size: 20px;
   font-weight: 600;
   line-height: 30px;
-color: var(--black);
+  color: var(--black);
 }
-section .container{
-    display: flex;
-    height: calc(100vh - 92px);
-    align-items: center;
+section .container {
+  display: flex;
+  height: calc(100vh - 92px);
+  align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 35px;
+  gap: 40px;
 }
-.info h1{
+@media (max-width: 767px) {
+  section .container {
+    justify-content: center;
+  }
+}
+.info h1 {
   font-size: 50px;
   font-weight: 600;
   line-height: 75px;
-  
+}
+
+.info .description {
+  margin-bottom: 53px;
+  font-size: 35px;
+  font-weight: 500;
+}
+.info .if-have-an-accout {
+  font-size: 16px;
+}
+.info .if-have-an-accout a {
+  font-weight: bold;
+  color: var(--ocean-blue);
+}
+.form h2 {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 30px;
+}
+.form form input {
+  display: block;
+  min-width: 280px;
+  padding: 20px;
+  margin: 20px 0;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  background-color: var(--alice-blue);
+}
+.form form .input-username {
+  margin-bottom: 40px;
+}
+.form form input::placeholder {
+  color: var(--maximum-blue-purple);
+}
+.form form a {
+  display: block;
+  margin: 15px 0 40px 0;
+  text-align: right;
+  color: var(--silver);
+}
+.form form .login-btn {
+  color: var(--white);
+  background-color: var(--ocean-blue);
+}
+.form .continue-with {
+  margin: 40px 0;
+  text-align: center;
+  color: var(--silver);
+}
+.form .login-with  {
+  justify-content: center;
+  gap: 20px;
+  list-style: none;
+}
+.form .login-with p{
+text-align: center;
+margin-bottom: 10px;
+}
+.form .login-with ul {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  list-style: none;
+}
+.form .login-with ul li a img {
+  width: 41px;
 }
